--- a/API-EXPRESS-MYSQL/package.json
+++ b/API-EXPRESS-MYSQL/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
